# ramp

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  coarse_actions_latest.pkl  fine_actions_latest.pkl  fine_actions_per_coarse_latest.pkl  main.py  package.xml  setup.py
core/: action_interface.py  agent.py  const.py
core/utils/: general_utils.py  ros_transform_utils.py  transform_utils.py
launch/: bringup_interface.launch  top_realsense.launch  wrist_realsense.launch
scripts/: gripper.py
